# hr-tools

./: .gitignore  CLAUDE.md  README.md  build.bat  build.spec  pyproject.toml  requirements.txt  run.bat
.plans/: logging-improvement.md  multi-model-group-chat.md
app/: main.py
app/common/: storage_config.py
app/components/: __init__.py  group_chat_message_widget.py  log_viewer_window.py  participant_edit_dialog.py
app/view/: __init__.py  ai_chat_interface.py  ai_settings_interface.py  group_chat_interface.py  main_window.py
core/: __init__.py  group_chat_manager.py  model_manager.py
data/: database.py
data/models/: __init__.py  group_chat.py
data/repositories/: __init__.py  ai_config_repository.py  group_chat_repository.py
tests/: conftest.py
tests/test_data/: test_group_chat_repository.py
